assets/style.css
/* Colors */
html {background-color: #1AA100; color: white; font-family: sans-serif;}
a {color: inherit;}
header a {text-decoration: none;}
main {background-color: white; color: black;}
main a {color: #0068ff;}
a:hover, a:focus {text-decoration: underline;}
/*
NOTE: If you want to recolor the social links, use https://codepen.io/sosuke/pen/Pjoqqp
Remember that the images aren't black by default; you'll need the extra filter code
*/

/* Layout experiment - center the main page content vertically */
main {
    display: flex;
    flex-direction: column;
}
main>.container {
    flex-grow: 1;
}
.two-column-container {
    height: 100%;
}

/* Headers */
section {
    margin-top: 1em;
    margin-bottom: 1em;
}
h1, p {
    margin-top: 0;
}
p:last-child {margin-bottom: 0;}
h1 {font-weight: bold; font-size: 2em;}
h2 {font-weight: bold; font-size: 1.8em;}
h3 {font-weight: bold; font-size: 1.55em;}
h4 {font-weight: bold; font-size: 1.35em;}
h5 {font-weight: bold; font-size: 1.2em;}
h6 {font-weight: bold; font-size: 1em;}

/* Layout */
html {width: 100%; height: 100%; margin: 0pt;}
body {width: 100%; min-height: 100%; margin: 0pt; display: flex; flex-direction: column; box-sizing: border-box;}
main {
    flex: 1 0 auto;
}

.container-outer {
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
}
.container-outer:first-child {
    padding-top: env(safe-area-inset-top);
}
.container-outer:last-child {
    padding-bottom: env(safe-area-inset-bottom);
}
.container {
    max-width: 60em;
    margin: 0 auto;
    padding: 1em;
    overflow: auto;
}

/* Header */
#site-header .container {padding: 0; display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;}
#site-header h1 {font-size: 2em; padding: 1rem; margin: 0;}
#site-header nav {padding: 0; background-color: #188100; display: flex; flex-direction: row; align-items: center;}
#site-header nav a {margin: 1em;}
#site-header nav a:not(:last-child) {margin-right: 0;}

/* Footer */
footer {text-align: center;}

/* Misc styles used on various pages */
.post-title {margin-bottom: 0;}
.copyright {font-size: 0.7em;}
a.social {text-decoration: none !important; margin-left: 0.25em; margin-right: 0.25em;}
.social img {width: 1.5em; height: 1.5em;}
img {width: 100%; max-width: 100%;}

/* Desktop */
@media screen and (min-width:35em) {
    #site-header .container {
        flex-direction: row;
    }
    #site-header nav a {
        margin: 1.5em;
    }

    /* These should only ever be used together. */
    .two-column-container {
        display: flex;
        flex-direction: row;
    }
    .left-column {
        width: 50%;
        padding-right: 0.5em;
        box-sizing: border-box;
        order: 0;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
    .right-column {
        width: 50%;
        padding-left: 0.5em;
        box-sizing: border-box;
        order: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

